# OCR

./: .gitignore  README.md  pyproject.toml  record_tk.py  screen_tk.py  train.py  windows_program.py
OCR/: calibration.py  calibration.spec  import_file.py  inference_fast.py  inference_fast.spec  pixel_pick.py  requirement.txt  screen_tk.py
OCR/cfg/: README.md  cfg.ini
OCR/compare_file/: README.md  aaa.sv  bb.sv  bold_gen.py  c.sv  calibration.txt  gen_dataset.txt  ouput_fast_single_img.txt
OCR/export/: README.md
OCR/file_dump/: Makefile  file_dump.py  setup.txt
OCR/file_dump/scripts/: my_func.py
OCR/file_dump_exe/: Makefile  setup.py
OCR/file_dump_exe/scripts/: my_func.py
OCR/file_dump_exe/tmp/: README.md
OCR/log/: README.md
OCR/script/: cfg.py  gen_dataset_fast.py  gen_training_data_fast.py  inference_core.py  keyboard_mouse_ctrl.py  load_model.py  win_api_test.py  windows_api.py
OCR/scripts/: background_utility.py  cfg.py  gen_dataset_fast.py  gen_training_data_fast.py  inference_core.py  keyboard_mouse_ctrl.py  load_model.py  win_api_test.py  windows_api.py
