[project]
name = "ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "getmac>=0.9.5",
    "matplotlib==3.8.4",
    "numpy==1.26.4",
    "opencv-contrib-python==4.7.0.72",
    "pycryptodome>=3.23.0",
    "pynput>=1.8.1",
    "pywin32==311",
    "requests>=2.32.5",
    "wmi>=1.5.1",
]
